--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -5,17 +5,19 @@
         <link rel="shortcut icon" type="image/png"  href="assets/js/jasmine/jasmine_favicon.png">
         <link rel="stylesheet"                      href="assets/js/jasmine/jasmine.css">
 
+        <script type="text/javascript"  src="assets/js/require.js"></script>
+
         <script type="text/javascript"  src="assets/js/jasmine/jasmine.js"></script>
         <script type="text/javascript"  src="assets/js/jasmine/jasmine-html.js"></script>
         <script type="text/javascript"  src="assets/js/jasmine/boot.js"></script>
-        <script type="text/javascript"  src="assets/js/require.js"></script>
 
 
+        <!-- Add my specs here -->
         <script type="text/javascript"  src="spec/conceptSpec.js"></script>
+        <script type="text/javascript"  src="spec/relationSpec.js"></script>
 
 
     </head>
-
 <body>
 </body>
 </html>
