변경된 구조에 맞춰 prototype 추가

--- a/test/UnitTest.html
+++ b/test/UnitTest.html
@@ -10,7 +10,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
-    <script src="../assets/config.js"></script>
+    <script src="config.js"></script>
     <script src="testSuite.js"></script>
 </body>
 </html>
