--- a/prototype2.html
+++ b/prototype2.html
@@ -2,16 +2,20 @@
 <html>
 <head>
 <!-- Load the Paper.js library -->
-<script type="text/javascript" src="bower_components/paper/dist/paper.js"></script>
 <script type="text/javascript" src="bower_components/requirejs/require.js"></script>
+<!-- <script type="text/javascript" src="bower_components/paper/dist/paper.js"></script>
 
+ -->
 <!-- Define inlined PaperScript associate it with myCanvas -->
 
 </head>
 <body>
 
 	<canvas id="myCanvas" resize="true"></canvas>
+	<!--
 	<script type="text/javascript" src="assets/config.js"></script>
+	<script type="text/javascript" src="assets/prototype2.js"></script>
+	-->
 	<script type="text/javascript" src="assets/prototype2.js"></script>
 </body>
 </html>
