--- a/test/UnitTest.html
+++ b/test/UnitTest.html
@@ -9,6 +9,8 @@
 <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
+    <canvas id="myCanvas" resize="true"></canvas>
+
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
     <script src="config.js"></script>
     <script src="testSuite.js"></script>
